[package]
name = "m5stickc-plus-demo"
version = "0.1.0"
authors = ["okhsunrog <me@okhsunrog.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "m5stickc-plus-demo"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
embassy-executor = { version = "0.7.0", features = ["arch-std", "executor-thread"] }
critical-section = { version = "1.2", features = ["std"] }
embassy-time = { version = "0.4.0" }
embassy-sync = "0.7.0"
embassy-futures = "0.1.1"
embassy-embedded-hal = "0.3.0"

anyhow = "1.0.98"
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-io-adapters = "0.6.1"
embedded-hal-nb = "1.0.0"
static_cell = "2.1.0"

axp192-dd = { path = "../axp192-dd", features = ["log", "blocking"]}

[build-dependencies]
embuild = "0.33"
